# mlx-ft6336-drivers

./: CMakeLists.txt  README.md
examples/: ft6336_get_touch_count.cpp
src/: mlx_ft6336.cpp  mlx_ft6336.h
